--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,17 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 dependencies {
     compile 'org.redisson:redisson:3.15.1'
     compile "mysql:mysql-connector-java:8.0.23"
     compile "com.discord4j:discord4j-core:3.1.3"
-    compile "io.projectreactor:reactor-core:3.4.3"
+    compile "io.projectreactor:reactor-core:3.4.4"
     compile 'it.unimi.dsi:fastutil:8.5.2'
+    compile "io.github.classgraph:classgraph:4.8.102"
 }
